# diskomap

./: Cargo.toml  LICENSE-MIT  README.md
examples/: arbitrary_map.rs  convert.rs  index.rs  integrity.rs  simple.rs  write_error.rs
src/: bin_format.rs  btree.rs  btree_index.rs  cfg.rs  file_work.rs  file_worker.rs  format.rs  hashmap_index.rs  index.rs  integrity.rs  lib.rs  map_trait.rs  map_with_file.rs  tests.rs  text_format.rs  write_worker.rs
