[package]
name = "diskomap"
version = "0.1.0"
authors = ["Alex Astakhov <madmonkey@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.59"
serde_json = "1.0.59"
crc = "1.8.1"
rust-crypto = "0.2"
tempfile = "3.1.0"
fs2 = "0.4.3"
vector-map = "1.0.1"

[dev-dependencies]
serde = { version = "1.0.59", features = ["derive"] }
tempfile = "3.1.0"

