[package]
name = "diskomap"
version = "0.1.0"
authors = ["Alex Astakhov <madmonkey@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.59"
serde_json = "1.0.59"
bincode2 = "2.0.1"
crc = "1.8.1"
rust-crypto = "0.2"
fs2 = "0.4.3"
uuid = { version = "0.8.1", default-features = true, features = ["serde", "v4"] }
hex = "0.4.2"

[dev-dependencies]
serde = { version = "1.0.59", features = ["derive"] }
